fix [FEED]: horizontal scroll box was to small for some images

--- a/src/app/pages/feed/image-card/image-card.component.scss
+++ b/src/app/pages/feed/image-card/image-card.component.scss
@@ -20,6 +20,11 @@
   color:white;
 }
 
+.card-image {
+  max-height: 450px;
+  overflow: hidden;
+}
+
 .card:hover {
   .card-image {
     opacity: 0.8;
