--- a/src/app/pages/location-feed/location-feed.component.scss
+++ b/src/app/pages/location-feed/location-feed.component.scss
@@ -2,10 +2,8 @@
 
 drag-scroll {
     width: 100%;
-    // border:2px solid fuchsia;
     background: linear-gradient(to top, $tree 20%, white 100%);
-    height: 520px;
-    // margin: 0 auto;
+    height: 555px;
     padding-right:10px;
     padding-left: 10px;
 }
